# passmanager

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/cli/: parser.cpp  parser.hpp
src/core/: app.cpp  app.hpp  crypto.cpp  crypto.hpp  storage.cpp  storage.hpp
